refactors and memory leak fix

--- a/server/html/index.html
+++ b/server/html/index.html
@@ -9,10 +9,10 @@
             <ul id="messages"></ul>
         </div>
         <div id="ucontainer">
-            <h3>users:</h3>
+            <h3>users[<span id="n_users">0</span>]:</h3>
             <ul id="users"></ul>
         </div>
     </div>
 </body>
-<script src="router.js"></script>
+<script src="js/router.js"></script>
 </html>
